hphp/hack/test/ifc/check/lambda.php.exp
=== IFC analysis results for lambda.php
File "lambda.php", line 69, characters 19-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "lambda.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "lambda.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "lambda.php", line 69, characters 3-29:
  Another program point contributing to the illegal flow
File "lambda.php", line 75, characters 3-21:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "lambda.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "lambda.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "lambda.php", line 74, characters 3-18:
  Another program point contributing to the illegal flow
  File "lambda.php", line 74, characters 16-17:
  Another program point contributing to the illegal flow
File "lambda.php", line 63, characters 5-15:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "lambda.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "lambda.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "lambda.php", line 54, characters 3-72:
  Another program point contributing to the illegal flow
  File "lambda.php", line 55, characters 9-14:
  Another program point contributing to the illegal flow
  File "lambda.php", line 56, characters 7-15:
  Another program point contributing to the illegal flow
  File "lambda.php", line 60, characters 5-14:
  Another program point contributing to the illegal flow
File "lambda.php", line 49, characters 3-15:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "lambda.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "lambda.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "lambda.php", line 44, characters 7-15:
  Another program point contributing to the illegal flow
  File "lambda.php", line 45, characters 5-18:
  Another program point contributing to the illegal flow
File "lambda.php", line 27, characters 3-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "lambda.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "lambda.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "lambda.php", line 15, characters 3-13:
  Another program point contributing to the illegal flow
  File "lambda.php", line 14, characters 3-14:
  Another program point contributing to the illegal flow
  File "lambda.php", line 26, characters 15-19:
  Another program point contributing to the illegal flow
  File "lambda.php", line 26, characters 3-20:
  Another program point contributing to the illegal flow
File "lambda.php", line 39, characters 3-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "lambda.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "lambda.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "lambda.php", line 15, characters 3-13:
  Another program point contributing to the illegal flow
  File "lambda.php", line 14, characters 3-14:
  Another program point contributing to the illegal flow
  File "lambda.php", line 36, characters 7-15:
  Another program point contributing to the illegal flow
  File "lambda.php", line 33, characters 9-17:
  Another program point contributing to the illegal flow
  File "lambda.php", line 32, characters 3-92:
  Another program point contributing to the illegal flow
